--- a/AppLogin/templates/AppLogin/padre.html
+++ b/AppLogin/templates/AppLogin/padre.html
@@ -84,13 +84,13 @@
         <br>
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><a class="nav-link text-center text-muted" href = "{% url 'AboutUs' %}">Acerca de nosotros</a></div>
-        </footer>
+        </footer>  
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- SimpleLightbox plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>-->
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'AppLogin/js/scripts.js' %}"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
